# COLA

./: .gitignore  .readthedocs.yaml  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_EN.md  CHANGELOG.md  CHANGES_SUMMARY.md  COLA_CLASS_LOCATION.txt  CONDA_ENV_SETUP.md  CONTRIBUTING.md  Compas__AReS-DisCOUNT.ipynb  Compas__DiCE.ipynb  Credit__ALIBI.ipynb  Credit__DiCE-ALIBI-LIME.ipynb  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_SUMMARY.md  FAQ.md  HIGHLIGHT_CHANGES_SUMMARY.md  HIGHLIGHT_CHANGES_USAGE.md  INSTALLATION.md  LGBMClassifier.pkl  LICENSE  MANIFEST.in  Makefile  PROJECT_STRUCTURE.md  PYPI_READY.md  PYPI_RELEASE_CHECKLIST.md  QUICKSTART.md  QUICK_DOCS_REFERENCE.md  README.md  README.rst  README_DOCS_SUMMARY.md  README_old.rst  READTHEDOCS_DEPLOYMENT.md  RELEASE_GUIDE.md  SUMMARY.md  USAGE_SUMMARY.txt  conda_install.bat  create_conda_env.py  demo.ipynb  (+9 more)
.circleci/: config.yml
.github/workflows/: ci.yml
cola/: __init__.py  ace_generator.py  data.py  model.py  test.ipynb  trained_LGBMClassifier.pkl
cola/ce_module/: _init_.py  base_ce.py  ce_models.py
cola/model_module/: _init_.py  base_model.py  pretrained_model.py
cola/policy_module/: policy.py
counterfactual_explainer/: alibi_cfi.py  ares.py  base_explainer.py  dice.py  discount.py  knn.py
dataset/: __init__.py  compas.py  german_credit.py  heloc.py  hotel_bookings.py
datasets/: __init__.py  compas.py  data_loader.py  german_credit.py  heloc.py  hotel_bookings.py
docs/: BUILD_DOCS.md  DATA_INTERFACE_QUICKREF.md  Makefile  NEW_DATA_INTERFACE.md  WACHTERCF_USAGE.md  changelog.rst  conf.py  contributing.rst  faq.rst  index.rst  installation.rst  quickstart.rst  requirements-docs.txt
docs/api/: ce_generator.rst  cola.rst  data.rst  models.rst  policies.rst  visualization.rst
docs/tutorials/: 01_basic_tutorial.md  README.md
docs/user_guide/: data_interface.rst  explainers.rst  matching_policies.rst  models.rst  visualization.rst
examples/: complete_usage_example.py  data_usage_example.py  example-cola_with_dice.ipynb  example-cola_with_discount.ipynb
models/: mlp.py
qa/: COLA_CLASS_GUIDE.md  COLA_CLASS_RECOMMENDATION.md  COLA_IMPROVEMENTS.md  FINAL_DATA_REFACTOR.md  INDEX.md  INSTALLATION.md  NAMING_RECOMMENDATIONS.md  PACKAGE_NAME_EXPLAINED.md  PACKAGING_NOTE.md  README.md  SUMMARY.md
scripts/: build_release.sh  publish_to_pypi.sh
test_dataset/: __init__.py  compas.py  german_credit.py  heloc.py  hotel_bookings.py
tests/: __init__.py  conftest.py  test_data_interface.py  test_model_interface.py
xai_cola/: __init__.py  cola_explainer.py  counterfactual_limited_actions.py  main.py  version.py
xai_cola/ce_generator/: __init__.py  alibi_cfi.py  ares.py  base_explainer.py  dice.py  discount.py  knn.py  wachtercf.py
xai_cola/ce_sparsifier/: __init__.py  cola.py
xai_cola/ce_sparsifier/data/: TRANSFORM_EXAMPLE.md  __init__.py  coladata.py
xai_cola/ce_sparsifier/models/: __init__.py  base.py  factory.py  pytorch.py  sklearn.py  tensorflow1.py  tensorflow2.py
xai_cola/ce_sparsifier/policies/: __init__.py
xai_cola/ce_sparsifier/policies/data_composer/: __init__.py  data_composer.py
xai_cola/ce_sparsifier/policies/feature_attributor/: base_attributor.py  pshap.py
xai_cola/ce_sparsifier/policies/matching/: __init__.py  base_matcher.py  cem_matcher.py  ect_matcher.py  nn_matcher.py
xai_cola/ce_sparsifier/utils/: __init__.py  pipeline_utils.py  preprocessor_wrapper.py  pytorch_models.py  warnings.py
xai_cola/ce_sparsifier/visualization/: __init__.py  diversity.py  heatmap.py  heatmap_direction.py  highlight_dataframe.py  stacked_bar.py
xai_cola/cola/: __init__.py
xai_cola/cola/data_composer/: data_composer.py
xai_cola/cola/feature_attributor/: base_attributor.py  pshap.py
xai_cola/cola/matching/: __init__.py  base_matcher.py  cem_matcher.py  nn_matcher.py  ot_matcher.py
xai_cola/cola_policy/: __init__.py
xai_cola/cola_policy/feature_attributor/: __init__.py  base_attributor.py  pshap.py
xai_cola/cola_policy/matching/: __init__.py  base_matcher.py  cem_matcher.py  ect_matcher.py
xai_cola/counterfactual_explainer/: __init__.py  alibi.py  alibi_cfi.py  ares.py  base_explainer.py  dice.py  discount.py  knn.py
xai_cola/counterfactual_refiner/: __init__.py  base_policy.py  pshap_with_ot_matcher.py
xai_cola/data/: __init__.py  ares_dataset_info.py  base_data.py  numpy_data.py  pandas_data.py
xai_cola/data_interface/: ares_dataset_info.py  base_data.py  pandas_data.py
xai_cola/datasets/: __init__.py  german_credit.py
xai_cola/datasets/rawdata/: german_credit.csv
xai_cola/ml_model/: base_model.py  model.py  sklearn_model.py
xai_cola/ml_model_interface/: __init__.py  base_model.py  model.py  pytorch_model.py  sklearn_model.py
xai_cola/plot/: heatmap.py  highlight_dataframe.py
xai_cola/utils/: logger_config.py
