[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xai-cola"
version = "0.1.5"
description = "COunterfactual explanations with Limited Actions (COLA)"
readme = "README.rst"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Lin Zhu", email = "s232291@student.dtu.dk"},
    {name = "Lei You", email = "leiyo@dtu.dk"},
]
keywords = ["explainable AI", "XAI", "counterfactual explanations", "machine learning", "interpretability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.26.4,<2.0",
    "pandas>=2.0.0,<=2.3.0",
    "scikit-learn>=1.3.0,<=1.7.0",
    "scipy>=1.13.0,<=1.16.0",
    "dice-ml>=0.10,<=0.12",
    "cem==1.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "shap>=0.41.0",
    "POT>=0.9.0",
    "torch>=2.3.0",
    "tqdm>=4.67.0",
]

[project.optional-dependencies]
jupyter = [
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "notebook>=6.0.0",
]
all = [
    "xai-cola[jupyter]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "furo>=2023.3.27",
    "sphinx-copybutton>=0.5.0",
    "myst-parser>=1.0.0",
    "sphinx-autobuild>=2021.3.14",
    "linkify-it-py>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/understanding-ml/COLA"
Documentation = "https://cola.readthedocs.io/"
Repository = "https://github.com/understanding-ml/COLA"
Issues = "https://github.com/understanding-ml/COLA/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["xai_cola*"]
exclude = ["tests*", "examples*", "scripts*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.csv", "*.pkl", "*.data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

